--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,22 @@
+alembic==1.15.2
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==5.0.1
+asyncpg==0.30.0
 click==8.1.8
 exceptiongroup==1.3.0
 fastapi==0.115.12
 h11==0.16.0
 idna==3.10
+Mako==1.3.10
+MarkupSafe==3.0.2
+psycopg==3.2.7
+psycopg2==2.9.10
 pydantic==2.11.4
 pydantic_core==2.33.2
 python-dotenv==1.1.0
 sniffio==1.3.1
+SQLAlchemy==2.0.40
 starlette==0.46.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
