--- a/frontend/financetracker/package.json
+++ b/frontend/financetracker/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@react-oauth/google": "^0.12.2",
     "jwt-decode": "^4.0.0",
+    "nordigen-bank-ui": "^1.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
